fix css spacing

--- a/components/Documentation/DocumentationFeature.module.css
+++ b/components/Documentation/DocumentationFeature.module.css
@@ -1,5 +1,5 @@
 .DocumentationFeature {
-	margin: 0;
+	margin: 0 0 2rem 0;
 
 	.name {
 		font-size: 1.6rem;
